# Parcels

./: .Dockerfile.swp  .coverage  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FieldSampleBug.py  LICENSE.md  PARCELStutorial.ipynb  README.md  appveyor.yml  codecov.yml  environment.yml  environment_linux.yml  environment_osx.yml  environment_py2_linux.yml  environment_py2_osx.yml  environment_py2_win.yml  environment_py3_linux.yml  environment_py3_osx.yml  environment_py3_win.yml  environment_py3p6_linux.yml  environment_win.yml  environment_win32.yml  parcels_tutorial.py  pixi.toml  plotParticles.py  pyproject.toml  requirements-dev.txt  requirements-dev.yml  requirements.txt  (+5 more)
.binder/: environment.yml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: 01_feature.md  02_bug.yaml  config.yml  general-issue.md
.github/ci/: min-core-deps.yml  min_deps_check.py  recipe.yaml
.github/scripts/: install_miniconda.ps1  linux_install.sh  linux_integrationtest.sh  linux_test.sh  linux_unittest.sh  osx_integrationtest.sh  osx_test.sh  osx_unittest.sh  windows_install.bat  windows_integrationtest.bat  windows_test.bat  windows_unittest.bat
.github/workflows/: additional.yml  benchmarks.yml  binder.yml  cache-pixi-lock.yml  check-min-deps.yml  ci-workflow-integrationtests.yml  ci-workflow-linting.yml  ci-workflow-unittests.yml  ci-workflow.yml  ci.yml  integration-tests.yml  linting.yml  nightly.yml  pypi-release.yaml  pypi-release.yml  unit-tests.yml
appveyor/: install_miniconda.ps1
asv_bench/: asv.conf.json
asv_bench/benchmarks/: Argofloat_benchmark.py  __init__.py  benchmark_argofloat.py  benchmarks.py  benchmarks_integration.py  benchmarks_nemo_curvilinear.py  benchmarks_particle_execution.py
docs/: Makefile  ParticleSetHierarchy_basic_framework.drawio  ParticleSet_UML.drawio  api.rst  c_standard_gcc7.txt  c_standard_gcc8.txt  conf.py  contributing.md  contributing.rst  documentation.rst  environment.yml  environment_docs.yml  index.md  index.rst  installation.md  installation.rst  make.bat  modules.rst  parcels.kernels.rst  parcels.rst  pyproject.toml  reference.md  reference.rst  tutorial_parcels_structure.md
docs/_templates/: layout.html
docs/community/: benchmarking.md  contributing.md  contributing.rst  index.md  index.rst  maintainer.md  policies.md  v4-migration.md
docs/documentation/: additional_examples.md  additional_examples.rst  index.md  index.rst
docs/examples/: documentation_LargeRunsOutput.ipynb  documentation_MPI.ipynb  documentation_advanced_zarr.ipynb  documentation_geospatial.ipynb  documentation_homepage_animation.ipynb  documentation_indexing.ipynb  documentation_stuck_particles.ipynb  documentation_unstuck_Agrid.ipynb  example_brownian.py  example_dask_chunk_OCMs.py  example_globcurrent.py  (+36 more)
examples/: PARCELStutorial.ipynb  Untitled.ipynb  bench.ipynb  bench_parcels.ipynb  c_test.c  example_brownian.py  example_decaying_eddy.py  example_decaying_moving_eddy.py  example_delay_start.py  example_globcurrent.py  example_moving_eddies.py  example_ofam.py  example_peninsula.py  example_radial_rotation.py  example_recursive_errorhandling.py  example_stommel.py  example_stommel_timer.py  example_vector_plots.py  field_test.ipynb  fields.ipynb  parcels_tutorial.ipynb  pset_show_tutorial.ipynb  pset_test.ipynb  record_arrays.ipynb  test_PARCELStutorial.ipynb  test_case_globcurrent.py  test_case_ofam.py  test_globcurrent.py  test_parcels_tutorial.ipynb  test_tutorial_Agulhasparticles.ipynb  test_tutorial_advancetime.ipynb  test_tutorial_delaystart.ipynb  test_tutorial_periodic_boundaries.ipynb  test_tutorial_plotting.ipynb  tutorial_Agulhasparticles.ipynb  tutorial_advancetime.ipynb  tutorial_delaystart.ipynb  tutorial_jit_vs_scipy.ipynb  tutorial_periodic_boundaries.ipynb  tutorial_plotting.ipynb
include/: parcels.h
parcels/: .field.py.swp  __init__.py  _compat.py  _constants.py  _decorators.py  _index_search.py  _interpolate.py  _interpolation.py  _particledata.py  _reprs.py  _spatialhash.py  _tutorial.py  _typing.py  _version.py  basefield.py  basegrid.py  baseinteractionkernel.py  basekernel.py  baseparticlefile.py  codegen.py  codegenerator.py  collectionaos.py  collections.py  comodo.py  compiler.py  converters.py  cython_particle.pyx  data-ingestion-structured.ipynb  field.py  fieldfilebuffer.py  fieldset.py  grid.py  gridadapter.py  gridset.py  gridv4.py  hashgrid.py  interactionkernelsoa.py  interpolators.py  jit_module.py  kernel.py  (+42 more)
parcelsscripts/: __init__.py
performance/: benchmark_CMEMS.py  benchmark_bickleyjet.py  benchmark_deep_migration_NPacific.py  benchmark_doublegyre.py  benchmark_galapagos_backwards.py  benchmark_palaeo_Y2K.py  benchmark_perlin.py  benchmark_stommel.py  example_performanceProfiling.py
scripts/: __init__.py  convert_IndexedOutputToArray.py  plotParticles.py  pull_data.py
tests/: common_kernels.py  conftest.py  customed_header.h  example_peninsula.py  grid_moving_eddies.py  grid_peninsula.py  peninsula.py  test_advection.py  test_analytical.py  test_basegrid.py  test_clibrary_interface.py  test_compat.py  test_converters.py  test_datasets.py  test_density.py  test_deprecations.py  test_diffusion.py  test_examples.py  test_field.py  test_field_gradient.py  test_fieldset.py  test_fieldset_sampling.py  test_generic_netcdf_grid.py  test_grid.py  test_grid_sampling.py  test_grids.py  test_id_generators.py  test_index_search.py  test_interaction.py  test_interaction_kernel.py  test_interp.py  test_interpolation.py  test_kernel.py  test_kernel_execution.py  test_kernel_language.py  test_moving_eddies.py  test_mpirun.py  test_multigrid.py  test_neighbor_search.py  test_nfieldset.py  (+30 more)
tests-v3/: test_examples.py  test_fieldset.py  test_fieldset_sampling.py  test_interaction.py  test_kernel_execution.py  test_kernel_language.py  test_particlesets.py
v4-tests/: test_uxarray_fieldset.py
(+448 files in other folders)
