[metadata]
name = parcels
author = oceanparcels.org team
license_files = LICENSE.md
license = MIT License
description = Framework for Lagrangian tracking of virtual ocean particles in the petascale age.
long_description_content_type=text/markdown
description-file = README.md
home-page = https://oceanparcels.org/
project_urls =
    Documentation = https://oceanparcels.org
    Source = https://github.com/OceanParcels/parcels
    Tracker = https://github.com/OceanParcels/parcels/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[flake8]
ignore = E501,F403,E226,E722,W503

[tool:pytest]
python_files = test_*.py example_*.py *tutorial*

