[metadata]
name = parcels
author = oceanparcels.org team
license_files = LICENSE.md
license = MIT License
description = Framework for Lagrangian tracking of virtual ocean particles in the petascale age.
home-page = https://oceanparcels.org/
project_urls =
    Source = https://github.com/OceanParcels/parcels
    Tracker = https://github.com/OceanParcels/parcels/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[flake8]
ignore =
    # missing whitespace around arithmetic operator
    E226,
    # do not use bare except, specify exception instead
    E722,
    # line break before binary operator
    W503
    # line too long (82 > 79 characters)
    E501,
    # ‘from module import *’ used; unable to detect undefined names
    F403,

    # Missing docstring in public module
    D100,
    # Missing docstring in public class
    D101,
    # Missing docstring in public method
    D102,
    # Missing docstring in public function
    D103,
    # Missing docstring in public package
    D104,
    # Missing docstring in magic method
    D105,
    # Missing docstring in __init__
    D107,

    # First line should be in imperative mood
    D401

[tool:pytest]
python_files = test_*.py example_*.py *tutorial*
